src/style.css
* {
  box-sizing: border-box;
}

@font-face {
  font-family: "Avenir";
  src: url(fonts/Avenir-Book.ttf);
  font-style: normal;
  font-weight: 300;
}

@font-face {
  font-family: "Avenir";
  src: url(fonts/Avenir-Heavy.ttf);
  font-style: normal;
  font-weight: 900;
}

body {
  font-family: "Avenir", sans-serif;
}

.seach-bars {
  margin: 20px 0;
}

.seach-bars__form {
  display: flex;
  border: 1px solid #e1e7ed;
  box-shadow: 0 1px 8px 0 rgba(61, 78, 97, 0.1);
  border-radius: 4px;
}

.seach-bars__form:hover {
  box-shadow: 0 3px 8px 0 rgba(61, 78, 97, 0.2);
}

.seach-bars__form--big {
  height: 70px;
  padding-left: 26px;
}

.seach-bars__bigImg {
  display: flex;
  align-items: center;
  margin-right: 17px;
}

.seach-bars__input {
  display: flex;
  font-family: inherit;
  font-weight: 900;
  width: 100%;
  height: 100%;
  border-width: 0;
}

.seach-bars__input:focus {
  outline: none;
}

.seach-bars__input--big {
  font-size: 16px;
}

.seach-bars__input--big::placeholder {
  font-size: 16px;
  font-weight: 300;
}

.seach-bars__form--small {
  height: 42px;
  padding-left: 13px;
}

.seach-bars__smallImg {
  display: flex;
  align-items: center;
  margin-right: 9px;
}

.seach-bars__smallImg :first-child {
  width: 11px;
}

.seach-bars__input--small {
  font-size: 14px;
}

.seach-bars__input--small::placeholder {
  font-size: 14px;
  font-weight: 300;
}

.seach-bars__input::placeholder {
  color: #3d4e61;
}

